knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Lead__c/fields/pqcrush__Lead__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Map Member Leads</relationshipLabel>
    <relationshipName>Map_Member_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>