knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Map_Member_Lead__c/fields/pqcrush__Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>pqcrush__Relationship_Map__c</referenceTo>
    <relationshipLabel>Map Member Leads</relationshipLabel>
    <relationshipName>Map_Member_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>